syntax = "proto3";

option csharp_namespace = "Nuke.Sample.API.Grpc";

package Nuke.Sample.API;

message SampleItemRequest{
  int32 id = 1;
}

message SampleItemResponse{
  int32 id = 1;
  string item_id = 2;
  string item_name = 3;
  string description = 4;
  double price = 5;
  SampleType sample_type = 6;
}

message SampleType {
  int32 id = 1;
  string type = 2;
}

service SampleServer {
  rpc GetItemById (SampleItemRequest) returns (SampleItemResponse) {}
}